--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "framer-motion": "^7.10.2",
     "next": "13.0.3",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
