--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
-    "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
-    "framer-motion": "^7.10.2",
-    "next": "13.0.3",
+    "eslint": "9.27.0",
+    "eslint-config-next": "15.3.3",
+    "framer-motion": "^12.15.0",
+    "next": "15.3.3",
     "phosphor-react": "^1.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
@@ -24,5 +24,11 @@
     "prettier-plugin-tailwindcss": "^0.2.0",
     "tailwindcss": "^3.2.4"
   },
-  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af"
+  "packageManager": "pnpm@10.6.5+sha512.cdf928fca20832cd59ec53826492b7dc25dc524d4370b6b4adbf65803d32efaa6c1c88147c0ae4e8d579a6c9eec715757b50d4fa35eea179d868eada4ed043af",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp",
+      "unrs-resolver"
+    ]
+  }
 }
